[metadata]
name = nmlmeld
license = MIT
url = https://github.com/pyNEMO/nml_meld

[options]
packages = nmlmeld
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
install_requires =
    setuptools
setup_requires =
    setuptools
    setuptools_scm

[tool:pytest]
testpaths = nmlmeld/tests
addopts =
    -v
    --cov

[coverage:run]
omit = **/tests/*

[isort]
profile = black
skip = .ipynb_checkpoints

[black]
exclude = .ipynb_checkpoints

[flake8]
max-line-length = 88
ignore =
    E203  # whitespace before ':' - doesn't work well with black
    W503  # line break before binary operator

[doc8]
max-line-length = 88

[darglint]
docstring_style=numpy

[mypy]
exclude = docs
files = nmlmeld/**/*.py
show_error_codes = True

[mypy-pytest.*]
ignore_missing_imports = True
